<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [<!ENTITY appName "Oximeter">]>

<resources>

    <string name="app_name">&appName;</string>
    <string name="app_title">Control D &appName;</string>

    <!--Login Activity-->
    <string name="sign_in">Login</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">616399372509353</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb616399372509353</string>


    <!--Progress Messages-->
    <string name="progress_msg_authentication">Authenticating…</string>
    <string name="progress_msg_loading">Loading…</string>
    <string name="progress_msg_search">Searching…</string>
    <string name="progress_location">Loading current location, Please Wait…</string>
    <string name="progress_msg_save">Saving…</string>
    <string name="progress_msg_del">Deleting…</string>
    <string name="progress_msg_update">Updating…</string>
    <string name="progress_msg_syncing">Syncing…</string>

    <!--Errors-->
    <string name="something_went_wrong">Something went wrong, Please try again later.</string>
    <string name="no_internet">No internet connectivity</string>
    <string name="no_record_found">No record found</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="required_field_error">%s is required</string>
    <string name="invalid_field_error">Please enter valid %s</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_bluetooth_required">Bluetooth is required</string>
    <string name="error_gps_required">GPS is required</string>

    <string name="device_disconnected">Device disconnected</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>
    <string name="menu_sync">Sync</string>


    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_data">Data</string>
    <string name="title_users">Users</string>
    <string name="title_add_user">Add New User</string>


    <string name="press_again_to_exit">Press again to exit</string>

    <!--Dialog-->
    <string name="sure_to_logout">Any un-synced session will be lost. Are you sure you want to continue logout?</string>
    <string name="sure_to_disconnect">Are you sure you want to disconnect from the BLE device?</string>
    <string name="sure_to_add_user">Are you sure you want to add this user?</string>
    <string name="sure_to_del_user">Are you sure you want to delete this user?</string>
    <string name="sure_to_update_user">Are you sure you want to save the changes (if any)?</string>
    <string name="sure_to_stop_session">Are you sure you want to stop recording the session?</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="sign_in_success">Signed-In successfully</string>
    <string name="logout_success">Logged-out successfully</string>
    <string name="user_del_success">User deleted successfully</string>
    <string name="user_add_success">User added successfully</string>
    <string name="user_update_success">User updated successfully</string>

    <!--DATA-->

    <string name="select_user">Select User</string>

    <string name="spo2_data">SpO<sub>2</sub> \n%d \%%</string>
    <string name="pulse_data">Pulse\n%d</string>
    <string name="pi_data">PI\n%,.1f \%%</string>

    <string name="spo2">SpO<sub>2</sub></string>
    <string name="pulse">Pulse</string>
    <string name="pi">PI</string>

    <string name="synced">SYNCED</string>
    <string name="unsynced">UNSYNCED</string>
    <string name="showing_data_for">Showing data for:</string>

    <string name="sync_status">Sync Status</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="session">Session</string>
    <string name="recording_type">Recording Type</string>
    <string name="sync_success">Session synced successfully</string>
    <string name="sync_failed">Unable to sync session at this time, please try again later</string>
    <string name="no_internet_sync_later">There is no active internet connection, your session will be synced to the server later on.</string>

    <string name="open_reading">Open reading</string>
    <string name="test_recording">%d minutes test</string>
    <string name="test_recording_success">Your %d minutes session was recorded successfully</string>

    <string name="select_recording_type">Select Recording Type</string>

    <!--Recording type Spinner List-->
    <string-array name="recording_type_array_list">
        <item>Open reading</item>
        <item>3 minutes test</item>
    </string-array>

    <string name="default_timer">00:00:00</string>

    <!--UserTable Profile-->

    <string name="click_to_add_users">Click on \"+\" icon to start adding users.</string>

    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood_group">BloodGroup</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="age">(%s years)</string>

    <string name="select_blood_group">Select BloodGroup</string>

    <!--BloodGroup Spinner List-->
    <string-array name="blood_group_array_list">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>

    <!--Notifications-->
    <string name="channel_name">&appName; Notification</string>
    <string name="channel_description">Notification from &appName;</string>
    <string name="channel_id">&appName; notification channel</string>


</resources>
