<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_bluetooth_searching_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="101"
        android:title="@string/menu_disconnect"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="102"
        android:title="@string/menu_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>