<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_edit"
        app:showAsAction="always"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_done_black_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_done"
        android:visible="false"
        app:showAsAction="always" />

</menu>