<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileDetailsActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/colorBorderLine"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLength="@integer/name_max_length"
                    android:maxLines="@integer/single_line"
                    android:textColor="@color/colorTextPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/email"
                android:textColorHint="@color/colorBorderLine"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/email_max_length"
                    android:maxLines="@integer/single_line"
                    android:textColor="@color/colorTextPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/mobile"
                android:textColorHint="@color/colorBorderLine"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789+"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="@integer/phone_max_length"
                    android:maxLines="@integer/single_line"
                    android:textColor="@color/colorTextPrimary" />
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/gender_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:text="@string/gender"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/male_radioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="8dp"
                    android:text="@string/male"
                    android:textColor="@color/colorTextSecondary" />

                <RadioButton
                    android:id="@+id/female_radioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/female"
                    android:textColor="@color/colorTextSecondary" />

                <RadioButton
                    android:id="@+id/other_radioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/other"
                    android:textColor="@color/colorTextSecondary" />
            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/dob"
                android:textColorHint="@color/colorBorderLine"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_black_24dp"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLines="@integer/single_line"
                    android:minWidth="@dimen/min_width"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:textColorHint="@color/colorBorderLine"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="@integer/height_max_length"
                        android:maxLines="@integer/single_line"
                        android:minWidth="@dimen/min_width"
                        android:textColor="@color/colorTextPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cm"
                    android:textColor="@color/colorBlack" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:textColorHint="@color/colorBorderLine"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="@integer/weight_max_length"
                        android:maxLines="@integer/single_line"
                        android:minWidth="@dimen/min_width"
                        android:textColor="@color/colorTextPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/kg"
                    android:textColor="@color/colorBlack" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/blood_group"
                android:textColorHint="@color/colorBorderLine"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bloodGroup_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:importantForAutofill="no"
                    android:inputType="text|textCapCharacters"
                    android:maxLength="@integer/blood_group_max_length"
                    android:maxLines="@integer/single_line"
                    android:textColor="@color/colorTextPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>