<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                tools:text="(M)" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                tools:text="(32 years)" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            tools:text="@string/email" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:paddingEnd="4dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                tools:text="@string/mobile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bloodGroupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/phoneTextView"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:textColor="@color/bloodColor"
                android:textSize="14sp"
                tools:text="@string/blood_group" />

        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>