<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dialog_background_transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_user"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/userSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_width"
                    android:spinnerMode="dropdown" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/select_recording_type"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/readingTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_width"
                    android:prompt="@string/select_recording_type"
                    android:spinnerMode="dropdown" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/doneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/menu_done" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

